<resources>

    <string-array name="text">
        <item>Arijit</item>
        <item>Neha Kakkar</item>
        <item>Atif Aslam</item>
        <item>Diljit</item>
        <item>Shakira</item>
        <item>Justin Bieber</item>

    </string-array>
    <integer-array name="image">
        <item>@drawable/login_bg</item>
        <item>@drawable/login_bg</item>
        <item>@drawable/login_bg</item>
        <item>@drawable/login_bg</item>
        <item>@drawable/login_bg</item>
        <item>@drawable/login_bg</item>
    </integer-array>

    <string name="app_name">HimKhand</string>
    <string name="listen">Listen to songs by your favourite artists, mood and many more. </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="a">a</string>
    <string name="song">Song</string>
    <string name="love_is">, Love is</string>
    <string name="life_is">Life is</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="password">Password</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="terms_conditions">I agree to the Terms and Conditions and Privacy policy </string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="or">OR</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>
    <string name="continue_with_mobile_number">Continue with mobile number</string>
    <string name="email_error">Please enter a valid Email ID</string>
    <string name="choose_artists">Choose Artists</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="view_all">View All</string>
    <string name="recent_songs">Recent Songs</string>
    <string name="fresh_hits">Fresh Hits</string>
    <string name="search_songs_albums_or_artists">Search Songs, Albums or Artists</string>
    <string name="stay_in_touch">Stay In Touch.</string>
    <string name="stay_connected_for_future_updates_and_new_products">Stay connected for future updates and new Products.</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="new_playlist">New PlayList</string>
    <string name="dexys">Dexys</string>
    <string name="_275300_monthly_listeners">275300, Monthly Listeners</string>
    <string name="top_songs">Top Songs</string>
    <string name="report">Report</string>
    <string name="copy_link">Copy Link</string>
    <string name="not_interested">Not Interested</string>
    <string name="share">Share</string>
    <string name="share_to">Share to...</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="_14_9k">14.9k</string>
    <string name="_269">269</string>
    <string name="ad_sheck_follow">Ad Sheck_.Follow</string>
    <string name="contrary_to_popular_belief_lorem_ipsum_is_not_simply_random_2000_years_old">Contrary to popular belief, lorem, ipsum is not simply random 2000 years old</string>

    />


</resources>