<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bg_gradient"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


>


    <ImageView
        android:id="@+id/img_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="5dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clear" />

    <TextView
        android:id="@+id/tv_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:textAlignment="center"
        android:text="@string/report"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_report"
        app:layout_constraintStart_toEndOf="@+id/img_report"
        app:layout_constraintTop_toTopOf="@+id/img_report" />


    <ImageView
        android:id="@+id/img_not_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_report"
        app:srcCompat="@drawable/ic_clear" />

    <TextView
        android:id="@+id/tv_no_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:text="@string/not_interested"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/img_not_interest"
        app:layout_constraintStart_toEndOf="@+id/img_not_interest"
        app:layout_constraintTop_toTopOf="@+id/img_not_interest" />

    <ImageView
        android:id="@+id/img_copylink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_not_interest"
        app:srcCompat="@drawable/ic_clear" />

    <TextView
        android:id="@+id/tv_copylink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:textAlignment="center"
        android:text="@string/copy_link"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_copylink"
        app:layout_constraintStart_toEndOf="@+id/img_copylink"
        app:layout_constraintTop_toTopOf="@+id/img_copylink" />


    <ImageView
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_copylink"
        app:srcCompat="@drawable/ic_clear" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:text="@string/share_to"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_share"
        app:layout_constraintStart_toEndOf="@+id/img_share"
        app:layout_constraintTop_toTopOf="@+id/img_share" />


    <ImageView
        android:id="@+id/img_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_share"
        app:srcCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_save"
        app:layout_constraintStart_toEndOf="@+id/img_save"
        app:layout_constraintTop_toTopOf="@+id/img_save" />

    <ImageView
        android:id="@+id/img_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_save"
        app:srcCompat="@drawable/ic_clear" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_cancel"
        app:layout_constraintStart_toEndOf="@+id/img_cancel"
        app:layout_constraintTop_toTopOf="@+id/img_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>
