<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_create_account"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:elevation="5dp"
    android:background="@drawable/login_bg"
    tools:context=".Auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC221C1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/envelope_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <android.widget.Button
            android:id="@+id/btn_reset_pwd"
            android:layout_width="239dp"
            android:layout_height="66dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="524dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:textAllCaps="false"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:layout_marginTop="257dp"
            android:layout_marginEnd="63dp"
            android:padding="10dp"
            android:textColor="@color/light_grey"
            android:text="@string/enter_the_email_address_associated_with_your_account"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/himkhand_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>